# ChangeLog for dev-perl/Class-Container
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Container/ChangeLog,v 1.5 2003/06/05 15:33:20 mcummings Exp $

*Class-Container-0.10 (05 Jun 2003)

  05 Jun 2003; Michael Cummings <mcummings@gentoo.org>
  Class-Container-0.10.ebuild:
  Version bump from CPAN

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*Class-Container-0.08 (13 Nov 2002)

  13 Nov 2002; Matthew Kennedy <mkennedy@gentoo.org>
  Class-Container-0.08.ebuild, ChangeLog,
  files/digest-Class-Container-0.08 :

  Initial import. Required dep by updated version of HTML::Mason.