@@ -1,6 +1,4 @@
-MD5 6a4c61210d8a49e9c16800857924c068 ChangeLog 700
-MD5 44821b20d88b909921ee527c3e50b83b Class-Container-0.08.ebuild 621
+MD5 c0ff472bb37172c8b531f30a673c3192 ChangeLog 820
 MD5 51c0871e9bf8103f0440a5b979f68c2e Class-Container-0.10.ebuild 624
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
-MD5 5ee6964f48c33d2014d87de65e2841c7 files/digest-Class-Container-0.08 71
 MD5 0cebfbcfc4e362a94be2a31c92c34ae1 files/digest-Class-Container-0.10 71
