@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Class-Container
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Container/ChangeLog,v 1.5 2003/06/05 15:33:20 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Container/ChangeLog,v 1.6 2003/12/24 21:34:49 mcummings Exp $
+
+  24 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
+  Class-Container-0.08.ebuild:
+  No longer available on CPAN
 
 *Class-Container-0.10 (05 Jun 2003)
 
